@@ -2,6 +2,7 @@ import sbt._
 import sbt.Keys._
 import akka.sbt.AkkaKernelPlugin
 import akka.sbt.AkkaKernelPlugin.{ Dist, outputDirectory, distJvmOptions, distBootClass }
+import org.flywaydb.sbt.FlywayPlugin._
 import play.PlayScala
 import sbtprotobuf.{ ProtobufPlugin => PB }
 import scalabuff.ScalaBuffPlugin._
@@ -13,8 +14,8 @@ object BackendBuild extends Build {
   val ScalaVersion = "2.10.4"
 
   val appName = "backend"
-  val appClass = "com.secretapp.backend.ApiKernel"
-  val appClassMock = "com.secretapp.backend.Main"
+  val appClass = "im.actor.backend.ApiKernel"
+  val appClassMock = "im.actor.backend.Main"
 
 
   lazy val buildSettings =
@@ -31,11 +32,15 @@ object BackendBuild extends Build {
   lazy val defaultSettings =
     buildSettings ++
       Seq(
-        initialize                ~= { _ => sys.props("scalac.patmat.analysisBudget") = "off" },
+        initialize                ~= { _ =>
+          sys.props("scalac.patmat.analysisBudget") = "off"
+          if (sys.props("java.specification.version") != "1.8")
+            sys.error("Java 8 is required for this project.")
+        },
         resolvers                 ++= Resolvers.seq,
-        scalacOptions             ++= Seq("-target:jvm-1.7", "-encoding", "UTF-8", "-deprecation", "-unchecked", "-feature", "-language:higherKinds"),
-        javaOptions               ++= Seq("-Dfile.encoding=UTF-8", "-XX:MaxPermSize=1024m"),
-        javacOptions              ++= Seq("-source", "1.7", "-target", "1.7", "-Xlint:unchecked", "-Xlint:deprecation"),
+        scalacOptions             ++= Seq("-encoding", "UTF-8", "-deprecation", "-unchecked", "-feature", "-language:higherKinds"),
+        javaOptions               ++= Seq("-Dfile.encoding=UTF-8"),
+        javacOptions              ++= Seq("-source", "1.8", "-target", "1.8", "-Xlint:unchecked", "-Xlint:deprecation"),
         parallelExecution in Test :=  false,
         fork              in Test :=  true
       )
@@ -58,14 +63,24 @@ object BackendBuild extends Build {
         scalacOptions        in (Compile,doc)     :=  Seq("-groups", "-implicits", "-diagrams")
       )
   ).settings(net.virtualvoid.sbt.graph.Plugin.graphSettings: _*)
-   .dependsOn(actorApi, actorModels, actorPersist)
-   .aggregate(actorTests, actorProtobuf)
+   .dependsOn(actorBackend)
+   .aggregate(actorTests, actorPersist, actorProtobuf)
+
+  lazy val akkaPersistenceSqlAsync = uri("git://github.com/prettynatty/akka-persistence-sql-async.git")
 
   lazy val actorUtil = Project(
     id   = "actor-util",
     base = file("actor-util"),
     settings = defaultSettings ++ Seq(
       libraryDependencies ++= Dependencies.util
+    )
+  )
+
+  lazy val actorTestkit = Project(
+    id   = "actor-testkit",
+    base = file("actor-testkit"),
+    settings = defaultSettings ++ Seq(
+      libraryDependencies ++= Dependencies.testkit
     )
   )
 
@@ -90,8 +105,14 @@ object BackendBuild extends Build {
   lazy val actorPersist = Project(
     id       = "actor-persist",
     base     = file("actor-persist"),
-    settings = defaultSettings
-  ).dependsOn(actorModels, actorProtobuf)
+    settings = defaultSettings ++ flywaySettings ++ Seq(
+      flywayUrl := "jdbc:postgresql://localhost:5432/actor",
+      flywayUser := "postgres",
+      flywayPassword := "",
+      flywaySchemas := Seq("public"),
+      flywayLocations := Seq("sql/migration")
+    )
+  ).dependsOn(actorModels, actorProtobuf, actorTestkit % "test")
 
   lazy val actorRestApi = Project(
     id       = "actor-restapi",
@@ -108,11 +129,33 @@ object BackendBuild extends Build {
     id       = "actor-api",
     base     = file("actor-api"),
     settings = defaultSettings
-  ).dependsOn(actorPersist, actorUtil, actorProtobuf)
+  ).dependsOn(actorPersist, actorUtil, actorProtobuf, akkaPersistenceSqlAsync)
+
+  lazy val actorSmtpd = Project(
+    id       = "actor-smtpd",
+    base     = file("actor-smtpd"),
+    settings = defaultSettings ++ Seq(
+      libraryDependencies ++= Dependencies.smtpd
+    )
+  ).dependsOn(actorApi)
+
+  lazy val actorBackend = Project(
+    id       = "actor-backend",
+    base     = file("actor-backend"),
+    settings = defaultSettings
+  ).dependsOn(actorApi, actorSmtpd).configs(ScalaBuff)
 
   lazy val actorTests = Project(
     id       = "actor-tests",
     base     = file("actor-tests"),
     settings = defaultSettings
-  ).dependsOn(actorApi, actorModels, actorPersist)
+  ).dependsOn(actorApi, actorModels, actorPersist, actorTestkit % "test")
+
+  lazy val actorSchema = Project(
+    id       = "actor-schema",
+    base     = file("actor-schema"),
+    settings = defaultSettings ++ Seq(
+      libraryDependencies ++= Dependencies.schema
+    )
+  )
 }
